# number-agreement

./: pyproject.toml  readme.md  testing.ipynb
code/: finetuning.csv  gru.py  question_5_anneal_0.1_loss_acc.csv  question_5_anneal_0.5_loss_acc.csv  question_5_anneal_16_loss_acc.csv  question_5_anneal_1_loss_acc.csv  question_5_anneal_2_loss_acc.csv  question_5_anneal_32_loss_acc.csv  question_5_anneal_4_loss_acc.csv  question_5_anneal_8_loss_acc.csv  requirements.txt  results-q4.csv  results-q5.csv  rnn.py  rnnmath.py  runner.py
code/loss-sentences/: gruSentences.txt  rnnSentences.txt
code/matrices/: gru_np_hdim10.Uh.npy  gru_np_hdim10.Ur.npy  gru_np_hdim10.Uz.npy  gru_np_hdim10.Vh.npy  gru_np_hdim10.Vr.npy  gru_np_hdim10.Vz.npy  gru_np_hdim10.W.npy  gru_np_hdim25.Uh.npy  gru_np_hdim25.Ur.npy  gru_np_hdim25.Uz.npy  gru_np_hdim25.Vh.npy  gru_np_hdim25.Vr.npy  gru_np_hdim25.Vz.npy  gru_np_hdim25.W.npy  gru_np_hdim50.Uh.npy  gru_np_hdim50.Ur.npy  gru_np_hdim50.Uz.npy  gru_np_hdim50.Vh.npy  gru_np_hdim50.Vr.npy  gru_np_hdim50.Vz.npy  gru_np_hdim50.W.npy  rnn.U.npy  rnn.V.npy  rnn.W.npy  rnn_np_hdim10.U.npy  rnn_np_hdim10.V.npy  rnn_np_hdim10.W.npy  rnn_np_hdim25.U.npy  rnn_np_hdim25.V.npy  rnn_np_hdim25.W.npy  rnn_np_hdim50.U.npy  rnn_np_hdim50.V.npy  rnn_np_hdim50.W.npy
code/matrices/question5/: rnn_np_anneal_10.U.npy  rnn_np_anneal_10.V.npy  rnn_np_anneal_10.W.npy  rnn_np_anneal_2.U.npy  rnn_np_anneal_2.V.npy  (+4 more)
code/run-logs/: anneal.txt  combined.txt  train-np-gru.txt  train-np-rnn.txt
report/: _quarto.yml  index.qmd  references.bib  report.ipynb
(+109 files in other folders)
